--- a/bo2016/partials/home.html
+++ b/bo2016/partials/home.html
@@ -8,8 +8,8 @@
 <p>The competition will be held at:</p>
 <ul>
   <li><b>Date</b>: TBD (Probably fourth weekend of January/first weekend of February 2016)</li>
-  <li><b>Venue</b>: TBA</li>
-  <li><b>Address</b>: TBA</li>
+  <li><b>Venue</b>: Gedung Indonesia Menggugat</li>
+  <li><b>Address</b>: Jalan Perintis Kemerdekaan Nomor 5 Bandung</li>
 </ul>
 
 <h2>Previous Editions of Bandung Open</h2>
