--- a/bo2016/partials/home.html
+++ b/bo2016/partials/home.html
@@ -7,7 +7,7 @@
 <h2>Competition Details</h2>
 <p>The competition will be held at:</p>
 <ul>
-  <li><b>Date</b>: TBD (Probably fourth weekend of January/first weekend of February 2016)</li>
+  <li><b>Date</b>: January 16-17, 2016</li>
   <li><b>Venue</b>: Gedung Indonesia Menggugat</li>
   <li><b>Address</b>: Jalan Perintis Kemerdekaan Nomor 5 Bandung</li>
 </ul>
