Added updat for logo, schedule, registration, competitor

--- a/bo2016/partials/contact.html
+++ b/bo2016/partials/contact.html
@@ -2,7 +2,7 @@
 <h1>Contact</h1>
 <p>For any further information, feel free to e-mail us:</p>
 <ul>
-	<li>Hafizh Dary</li>
+	<li><a href="mailto:hafizhdary@gmail.com">Hafizh Dary</li>
 	<li>Felita Mustika</li>
 	<li><a href="mailto:ardiantosatriawan@gmail.com">Ardianto Satriawan</a></li>
 </ul>
