--- a/bo2016/partials/home.html
+++ b/bo2016/partials/home.html
@@ -1,5 +1,6 @@
 <!-- insert the page content here -->
 <h1>Bandung Open 2016</h1>
+<p align="center"><img src="./img/logo.png" width="300px"></p>
 
 <p>Bandung Open 2016 is an official speedcubing competition. It is sanctioned by the World Cube Association.</p>
 <p>All competitor must be familiar with the <a href="http://worldcubeassociation.org/regulations">WCA Regulation</a>.</p>
