--- a/bo2016/partials/registration.html
+++ b/bo2016/partials/registration.html
@@ -1,3 +1,13 @@
 <!-- insert the page content here -->
 <h1>Registration</h1>
-<p>To be announced.</p>
+
+<p>WCA Official Registration Page: <a href=https://www.worldcubeassociation.org/results/c.php?i=BandungOpen2016>Click here</a></p>
+
+<h2>Registration fee</h2>
+<p><b>Early Bird (Payment before January, 14th 2016 00:00 local time)</b></p>
+<p>IDR 25k/event with maximum fee of IDR 200k</p>
+
+<p><b>Regular Fee (After Early Bird Period)</b></p>
+<p>IDR 30k/event with maximum fee of IDR 250k</p>
+
+<p>P.S : <b>No reimbursement</b>. Make sure you attend the event and have some fun :D</p>
