--- a/bo2016/partials/competitors.html
+++ b/bo2016/partials/competitors.html
@@ -1,3 +1,4 @@
 <!-- insert the page content here -->
 <h1>Competitors</h1>
-<p>To be announced.</p>
+
+<iframe class='centered' id='competitorList' style='height: 600px; width: 100%;' src='https://www.worldcubeassociation.org/results/competition_registration.php?competitionId=BandungOpen2016&list=1' />
