--- a/bo2016/partials/schedule.html
+++ b/bo2016/partials/schedule.html
@@ -16,51 +16,147 @@
 </ul>
 
 <h2>Saturday</h2>
-To be determined
-<!--
 <table cellpadding="0" cellspacing="0">
 	<tr>
 		<th width="20%">Time</th>
-		<th width="70%">Events</th>
+		<th width="45%">Events</th>
 		<th width="20%">Cut-off</th>
 		<th width="20%">#comp</th>
 	</tr>
 	<tr>
-		<td>08:00 - 08:30</td>
+		<td>07:30 - 08:30</td>
 		<td>Registration</td>
 		<td></td>
 		<td></td>
 	</tr>
 	<tr>
-		<td>08:30 - 09:00</td>
-		<td>3x3x3 blindfolded</td>
+		<td>08:30 - 09:30</td>
+		<td>3x3x3 Fewest Move Competition</td>
+		<td>-</td>
+		<td>Attempt 1</td> 
+	</tr>
+    <tr>
+		<td>09:30 - 10:30</td>
+		<td>Rubik's Clock</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>10:30 - 12:00</td>
+		<td>5x5x5</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>12:00 - 13:00</td>
+		<td>Lunch Break</td>
+		<td>-</td>
+		<td>P.S. : Submit MBLD Cubes</td> 
+	</tr>
+    <tr>
+		<td>13:00 - 14:00</td>
+		<td>Rubik's Cube Multiple Blindfolded</td>
 		<td>-</td>
 		<td>-</td>
 	</tr>
+    <tr>
+		<td>14:00 - 15:20</td>
+		<td>4x4x4</td>
+		<td>-</td>
+		<td>Final Round</td>
+	</tr>
+    <tr>
+		<td>15:20 - 16:10</td>
+		<td>Pyraminx</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>16:10 - 17:20</td>
+		<td>Rubik's Cube One Handed</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>17:20 - 18:20</td>
+		<td>Rubik's Cube Fewest Move Competition</td>
+		<td>-</td>
+		<td>Attempt 2</td> 
+	</tr>
 </table>
--->
 
 <h2>Sunday</h2>
-To be determined
-<!--
 <table cellpadding="0" cellspacing="0">
 	<tr>
 		<th width="20%">Time</th>
-		<th width="70%">Events</th>
+		<th width="45%">Events</th>
 		<th width="20%">Cut-off</th>
 		<th width="20%">#comp</th>
 	</tr>
-	<tr>
-		<td>08:00 - 08:30</td>
+		<tr>
+		<td>07:30 - 08:30</td>
 		<td>Registration</td>
 		<td></td>
 		<td></td>
 	</tr>
 	<tr>
-		<td>08:30 - 09:00</td>
-		<td>3x3x3 fewest moves</td>
+		<td>08:30 - 09:30</td>
+		<td>3x3x3 Fewest Move Competition</td>
+		<td>-</td>
+		<td>Attempt 3</td> 
+	</tr>
+    <tr>
+		<td>09:30 - 10:40</td>
+		<td>Rubik's Cube Blindfolded</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>10:40 - 11:40</td>
+		<td>Rubik's Cube</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>11:40 - 12:30</td>
+		<td>2x2x2</td>
+		<td>-</td>
+		<td>First Round</td> 
+	</tr>
+    <tr>
+		<td>12:30 - 13:30</td>
+		<td>Lunch Break</td>
 		<td>-</td>
 		<td>-</td>
 	</tr>
+    <tr>
+		<td>13:30 - 14:20</td>
+		<td>Rubik's Cube</td>
+		<td>-</td>
+		<td>Second Round</td> 
+	</tr>
+    <tr>
+		<td>14:20 - 14:50</td>
+		<td>2x2x2</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>14:50 - 15:40</td>
+		<td>Skewb</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>15:40 - 16:40</td>
+		<td>Rubik's Cube</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>16:40 - 17:40</td>
+		<td>Closing</td>
+		<td>-</td>
+		<td>Awarding etc</td> 
+	</tr>
 </table>
--->
