Added payement to Felita

--- a/bo2016/partials/registration.html
+++ b/bo2016/partials/registration.html
@@ -10,4 +10,6 @@
 <p><b>Regular Fee (After Early Bird Period)</b></p>
 <p>IDR 30k/event with maximum fee of IDR 250k</p>
 
+<p>Please transfer to Felita Ariella Mustika, account number: BNI, 0305021129, then send a confirmation to her, via phone number: +62-817-922-0157
+</p>
 <p>P.S : <b>No reimbursement</b>. Make sure you attend the event and have some fun :D</p>
