Added MoYu as sponsor, some style inmprovements

--- a/bo2016/partials/home.html
+++ b/bo2016/partials/home.html
@@ -20,6 +20,9 @@
   <li><a href="https://www.worldcubeassociation.org/results/c.php?i=BandungOpen2011">Bandung Open 2011</a></li>
 </ul>
 
+<h2>Sponsored by</h2>
+<p align="center"><img src="./img/moyu.jpg" width="300px"></p>
+
 <h2>Organized by</h2>
 <p align="center"><img src="./img/logos.png" width="300px"></p>
 <div>
