Schedule Updated, Competitor List

--- a/bo2016/partials/competitors.html
+++ b/bo2016/partials/competitors.html
@@ -1,4 +1,4 @@
 <!-- insert the page content here -->
 <h1>Competitors</h1>
 
-<iframe class='centered' id='competitorList' style='height: 600px; width: 100%;' src='https://www.worldcubeassociation.org/results/competition_registration.php?competitionId=BandungOpen2016&list=1' />
+<p>For competitor list, <a href="https://www.worldcubeassociation.org/competitions/BandungOpen2016/registrations">click here</a></p>
