--- a/bo2016/partials/schedule.html
+++ b/bo2016/partials/schedule.html
@@ -66,19 +66,19 @@
 		<td>Final Round</td>
 	</tr>
     <tr>
-		<td>15:20 - 16:10</td>
-		<td>Pyraminx</td>
-		<td>-</td>
-		<td>Final Round</td> 
-	</tr>
-    <tr>
-		<td>16:10 - 17:20</td>
+		<td>15:20 - 16:30</td>
 		<td>Rubik's Cube One Handed</td>
 		<td>-</td>
 		<td>Final Round</td> 
 	</tr>
     <tr>
-		<td>17:20 - 18:20</td>
+		<td>16:30 - 17:40</td>
+		<td>Rubik's Cube Blindfolded</td>
+		<td>-</td>
+		<td>Final Round</td> 
+	</tr>
+    <tr>
+		<td>17:40 - 18:40</td>
 		<td>Rubik's Cube Fewest Move Competition</td>
 		<td>-</td>
 		<td>Attempt 2</td> 
@@ -106,55 +106,55 @@
 		<td>Attempt 3</td> 
 	</tr>
     <tr>
-		<td>09:30 - 10:40</td>
-		<td>Rubik's Cube Blindfolded</td>
+		<td>09:30 - 10:20</td>
+		<td>Pyraminx</td>
 		<td>-</td>
 		<td>Final Round</td> 
 	</tr>
     <tr>
-		<td>10:40 - 11:40</td>
+		<td>10:20 - 11:20</td>
 		<td>Rubik's Cube</td>
 		<td>-</td>
-		<td>Final Round</td> 
+		<td>First Round</td> 
 	</tr>
     <tr>
-		<td>11:40 - 12:30</td>
+		<td>11:20 - 12:00</td>
 		<td>2x2x2</td>
 		<td>-</td>
 		<td>First Round</td> 
 	</tr>
     <tr>
-		<td>12:30 - 13:30</td>
+		<td>12:00 - 13:00</td>
 		<td>Lunch Break</td>
 		<td>-</td>
 		<td>-</td>
 	</tr>
     <tr>
-		<td>13:30 - 14:20</td>
+		<td>13:00 - 13:50</td>
 		<td>Rubik's Cube</td>
 		<td>-</td>
 		<td>Second Round</td> 
 	</tr>
     <tr>
-		<td>14:20 - 14:50</td>
+		<td>13:50 - 14:20</td>
 		<td>2x2x2</td>
 		<td>-</td>
 		<td>Final Round</td> 
 	</tr>
     <tr>
-		<td>14:50 - 15:40</td>
+		<td>14:20 - 15:10</td>
 		<td>Skewb</td>
 		<td>-</td>
 		<td>Final Round</td> 
 	</tr>
     <tr>
-		<td>15:40 - 16:40</td>
+		<td>15:10 - 16:10</td>
 		<td>Rubik's Cube</td>
 		<td>-</td>
 		<td>Final Round</td> 
 	</tr>
     <tr>
-		<td>16:40 - 17:40</td>
+		<td>16:10 - 17:10</td>
 		<td>Closing</td>
 		<td>-</td>
 		<td>Awarding etc</td> 
